--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
       <a href="contact.html"><li>Contact</li></a>
     </ul>
   </nav>
-  <h2 class="center-text red">Welcome to this page!</h2>
+  <h1 class="center-text red homepage-heading">Welcome to this page!</h1>
 </body>
 </html>
