--- a/model.html
+++ b/model.html
@@ -13,11 +13,11 @@
     </ul>
   </nav>
   <div id="heading"></div>
-  <h1 class="center-text red">Audi A4</h1>
+  <h1 class="center-text red homepage-heading">Audi A4</h1>
 
   <h2 class="center-text red">$36,825</h2>
   <div class="center-text">
-    <img src="image/audi_PNG1736.png" width="280" height="auto">
+    <img class="main-image" src="image/audi_PNG1736.png" width="280" height="auto">
   </div>
 
   <p class="center-text contrainer">
